specs/grammar/grammar.ebnf
// specs/grammar/grammar.ebnf — Sorayunara Grammar Specification (EBNF)

program        ::= item*
item           ::= function_decl
                 | struct_decl
                 | enum_decl
                 | trait_decl
                 | impl_block
                 | import_stmt

function_decl  ::= ("pub")? ("async")? "fn" IDENTIFIER ("<" type_params ">")? "(" params? ")" ("->" type)? block
struct_decl    ::= ("pub")? "struct" IDENTIFIER "{" struct_fields? "}"
enum_decl      ::= ("pub")? "enum" IDENTIFIER "{" enum_variants? "}"
trait_decl     ::= ("pub")? "trait" IDENTIFIER "{" trait_methods? "}"
impl_block     ::= "impl" (IDENTIFIER "for")? IDENTIFIER "{" function_decl* "}"

statement      ::= let_stmt
                 | return_stmt
                 | expr_stmt
                 | if_stmt
                 | while_stmt
                 | match_stmt

expression     ::= literal
                 | IDENTIFIER
                 | binary_op
                 | unary_op
                 | function_call
                 | match_expr
                 | pipe_expr
