bootstrap/src/parser.rs
#![allow(dead_code)]

use crate::ast::*;
use crate::diagnostic::Span;
use crate::lexer::{SpannedToken, TokenKind};

pub struct Parser {
    tokens: Vec<SpannedToken>,
    pos: usize,
}

impl Parser {
    pub fn new(tokens: Vec<SpannedToken>) -> Self {
        Self { tokens, pos: 0 }
    }

    fn peek(&self) -> &SpannedToken {
        &self.tokens[self.pos.min(self.tokens.len() - 1)]
    }

    fn peek_kind(&self) -> &TokenKind {
        &self.peek().kind
    }

    fn advance(&mut self) -> SpannedToken {
        let tok = self.peek().clone();
        if self.pos < self.tokens.len() - 1 {
            self.pos += 1;
        }
        tok
    }

    fn check(&self, kind: &TokenKind) -> bool {
        self.peek_kind() == kind
    }

    fn match_token(&mut self, kind: TokenKind) -> Result<SpannedToken, (String, Span)> {
        if self.check(&kind) {
            Ok(self.advance())
        } else {
            let tok = self.peek();
            Err((
                format!("Expected '{:?}', but found '{:?}'", kind, tok.kind),
                tok.span,
            ))
        }
    }

    fn skip_semicolons(&mut self) {
        while self.check(&TokenKind::Semicolon) {
            self.advance();
        }
    }

    pub fn parse_type(&mut self) -> Result<TypeNode, (String, Span)> {
        self.parse_union_type()
    }

    fn parse_union_type(&mut self) -> Result<TypeNode, (String, Span)> {
        let first = self.parse_primary_type()?;
        let mut members = vec![first];

        while self.check(&TokenKind::Pipe) {
            self.advance();
            members.push(self.parse_primary_type()?);
        }

        if members.len() == 1 {
            Ok(members.remove(0))
        } else {
            Ok(TypeNode::Union(members))
        }
    }

    fn parse_angle_type_args(&mut self) -> Result<Vec<TypeNode>, (String, Span)> {
        self.match_token(TokenKind::Less)?;
        let mut args = Vec::new();
        while !self.check(&TokenKind::Greater) && !self.check(&TokenKind::Eof) {
            args.push(self.parse_type()?);
            if self.check(&TokenKind::Comma) {
                self.advance();
                if self.check(&TokenKind::Greater) {
                    break;
                }
            } else {
                break;
            }
        }
        self.match_token(TokenKind::Greater)?;
        Ok(args)
    }

    fn parse_primary_type(&mut self) -> Result<TypeNode, (String, Span)> {
        let tok = self.advance();
        match tok.kind {
            TokenKind::Ident(ref name) => match name.as_str() {
                "Int" => Ok(TypeNode::Int),
                "Float" => Ok(TypeNode::Float),
                "Bool" => Ok(TypeNode::Bool),
                "String" => Ok(TypeNode::String),
                "Char" => Ok(TypeNode::Char),
                "Void" => Ok(TypeNode::Void),
                "Array" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Array(Box::new(args[0].clone())))
                    } else {
                        Err((
                            "Array<T> expects exactly one type argument".into(),
                            tok.span,
                        ))
                    }
                }
                "Slice" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Slice(Box::new(args[0].clone())))
                    } else {
                        Err((
                            "Slice<T> expects exactly one type argument".into(),
                            tok.span,
                        ))
                    }
                }
                "Set" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Set(Box::new(args[0].clone())))
                    } else {
                        Err(("Set<T> expects exactly one type argument".into(), tok.span))
                    }
                }
                "Map" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 2 {
                        Ok(TypeNode::Map(
                            Box::new(args[0].clone()),
                            Box::new(args[1].clone()),
                        ))
                    } else {
                        Err((
                            "Map<K, V> expects exactly two type arguments".into(),
                            tok.span,
                        ))
                    }
                }
                "Option" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Option(Box::new(args[0].clone())))
                    } else {
                        Err((
                            "Option<T> expects exactly one type argument".into(),
                            tok.span,
                        ))
                    }
                }
                "Task" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Task(Box::new(args[0].clone())))
                    } else {
                        Err(("Task<T> expects exactly one type argument".into(), tok.span))
                    }
                }
                "Chan" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 1 {
                        Ok(TypeNode::Chan(Box::new(args[0].clone())))
                    } else {
                        Err(("Chan<T> expects exactly one type argument".into(), tok.span))
                    }
                }
                "Result" => {
                    let args = self.parse_angle_type_args()?;
                    if args.len() == 2 {
                        Ok(TypeNode::Result(
                            Box::new(args[0].clone()),
                            Box::new(args[1].clone()),
                        ))
                    } else {
                        Err((
                            "Result<T, E> expects exactly two type arguments".into(),
                            tok.span,
                        ))
                    }
                }
                custom => {
                    if self.check(&TokenKind::Less) {
                        let args = self.parse_angle_type_args()?;
                        Ok(TypeNode::Generic {
                            name: custom.to_string(),
                            args,
                        })
                    } else {
                        Ok(TypeNode::Custom(custom.to_string()))
                    }
                }
            },
            TokenKind::Fn => {
                self.match_token(TokenKind::LParen)?;
                let mut params = Vec::new();
                while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
                    params.push(self.parse_type()?);
                    if self.check(&TokenKind::Comma) {
                        self.advance();
                    } else {
                        break;
                    }
                }
                self.match_token(TokenKind::RParen)?;
                self.match_token(TokenKind::Arrow)?;
                let ret = self.parse_type()?;
                Ok(TypeNode::Function {
                    params,
                    ret: Box::new(ret),
                })
            }
            TokenKind::Amp => {
                let is_mut = if self.check(&TokenKind::Mut) {
                    self.advance();
                    true
                } else {
                    false
                };
                let inner = self.parse_type()?;
                Ok(TypeNode::Ref(Box::new(inner), is_mut))
            }
            TokenKind::Star => {
                // Raw pointer type: *const T or *mut T
                let is_const = if self.check(&TokenKind::Const) || self.check(&TokenKind::Mut) {
                    if self.check(&TokenKind::Const) {
                        self.advance();
                        true
                    } else {
                        self.advance();
                        false
                    }
                } else {
                    return Err((
                        "Expected 'const' or 'mut' after '*' in pointer type".into(),
                        tok.span,
                    ));
                };
                let inner = self.parse_type()?;
                Ok(TypeNode::Ptr(Box::new(inner), is_const))
            }
            TokenKind::LBracket => {
                let inner = self.parse_type()?;
                self.match_token(TokenKind::RBracket)?;
                Ok(TypeNode::Array(Box::new(inner)))
            }
            TokenKind::LParen => {
                let mut items = Vec::new();
                if !self.check(&TokenKind::RParen) {
                    loop {
                        items.push(self.parse_type()?);
                        if self.check(&TokenKind::Comma) {
                            self.advance();
                            if self.check(&TokenKind::RParen) {
                                break;
                            }
                        } else {
                            break;
                        }
                    }
                }
                self.match_token(TokenKind::RParen)?;
                Ok(TypeNode::Tuple(items))
            }
            _ => Err((
                format!("Invalid type annotation '{:?}'", tok.kind),
                tok.span,
            )),
        }
    }

    fn parse_generic_params(&mut self) -> Result<Vec<GenericParam>, (String, Span)> {
        let mut params = Vec::new();
        if !self.check(&TokenKind::Less) {
            return Ok(params);
        }

        self.advance();
        while !self.check(&TokenKind::Greater) && !self.check(&TokenKind::Eof) {
            let name = match self.advance().kind {
                TokenKind::Ident(n) => n,
                other => {
                    return Err((
                        format!("Expected generic parameter name, got {:?}", other),
                        self.peek().span,
                    ));
                }
            };

            let mut bounds = Vec::new();
            if self.check(&TokenKind::Colon) {
                self.advance();
                loop {
                    bounds.push(self.parse_primary_type()?);
                    if self.check(&TokenKind::Plus) {
                        self.advance();
                    } else {
                        break;
                    }
                }
            }

            params.push(GenericParam { name, bounds });

            if self.check(&TokenKind::Comma) {
                self.advance();
                if self.check(&TokenKind::Greater) {
                    break;
                }
            } else {
                break;
            }
        }
        self.match_token(TokenKind::Greater)?;
        Ok(params)
    }

    pub fn parse_program(&mut self) -> Result<Program, (String, Span)> {
        let mut statements = Vec::new();
        self.skip_semicolons();

        while !self.check(&TokenKind::Eof) {
            statements.push(self.parse_statement()?);
            self.skip_semicolons();
        }

        Ok(Program { statements })
    }

    pub fn parse_statement(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let mut attributes = Vec::new();
        while self.check(&TokenKind::At) {
            attributes.push(self.parse_attribute()?);
        }

        match self.peek_kind() {
            TokenKind::Async | TokenKind::Fn => self.parse_function(attributes),
            TokenKind::Struct => self.parse_struct_decl(attributes),
            TokenKind::Trait => self.parse_trait_decl(),
            TokenKind::Impl => self.parse_impl_block(),
            TokenKind::Operator => self.parse_operator_decl(attributes),
            TokenKind::Extern => self.parse_extern_block(attributes),
            TokenKind::Import => {
                let tok = self.advance();
                let mut path = match self.peek_kind() {
                    TokenKind::StrLit(s) => {
                        let s = s.clone();
                        self.advance();
                        s
                    }
                    TokenKind::Ident(n) => {
                        let n = n.clone();
                        self.advance();
                        n
                    }
                    _ => {
                        return Err((
                            "Expected module name or file path after 'import'".into(),
                            tok.span,
                        ));
                    }
                };
                while self.check(&TokenKind::Dot)
                    || self.check(&TokenKind::ColonColon)
                    || self.check(&TokenKind::Slash)
                {
                    self.advance();
                    match self.peek_kind() {
                        TokenKind::Ident(sub) => {
                            let sub_name = sub.clone();
                            path.push('.');
                            path.push_str(&sub_name);
                            self.advance();
                        }
                        _ => {
                            return Err((
                                "Expected module sub-identifier after '.'".into(),
                                tok.span,
                            ));
                        }
                    }
                }
                self.skip_semicolons();
                Ok(SpannedStmt {
                    kind: StmtKind::Import(path),
                    span: tok.span,
                })
            }
            TokenKind::Mod => {
                let tok = self.advance();
                let name = match self.peek_kind() {
                    TokenKind::Ident(n) => {
                        let n = n.clone();
                        self.advance();
                        n
                    }
                    _ => {
                        return Err((
                            "Expected module name identifier after 'mod'".into(),
                            tok.span,
                        ));
                    }
                };
                self.skip_semicolons();
                Ok(SpannedStmt {
                    kind: StmtKind::Mod(name),
                    span: tok.span,
                })
            }
            TokenKind::Enum => self.parse_enum_decl(),
            TokenKind::Type => self.parse_type_alias(),
            TokenKind::Const => self.parse_const(),
            TokenKind::Comptime => self.parse_comptime(),
            TokenKind::Let => self.parse_let(),
            TokenKind::Unsafe => self.parse_unsafe_block(),
            TokenKind::If => self.parse_if(),
            TokenKind::While => self.parse_while(),
            TokenKind::Loop => self.parse_loop(),
            TokenKind::Break => {
                let tok = self.advance();
                self.skip_semicolons();
                Ok(SpannedStmt {
                    kind: StmtKind::Break,
                    span: tok.span,
                })
            }
            TokenKind::Continue => {
                let tok = self.advance();
                self.skip_semicolons();
                Ok(SpannedStmt {
                    kind: StmtKind::Continue,
                    span: tok.span,
                })
            }
            TokenKind::Return => self.parse_return(),
            TokenKind::Print => self.parse_print(),
            TokenKind::Test => self.parse_test_block(),
            TokenKind::Assert => self.parse_assert(),
            TokenKind::Ident(_) => {
                if self.pos + 1 < self.tokens.len() {
                    let next_kind = &self.tokens[self.pos + 1].kind;
                    if matches!(
                        next_kind,
                        TokenKind::Equal
                            | TokenKind::PlusEqual
                            | TokenKind::MinusEqual
                            | TokenKind::StarEqual
                            | TokenKind::SlashEqual
                    ) {
                        return self.parse_assignment();
                    }
                }
                self.parse_expr_statement()
            }
            _ => self.parse_expr_statement(),
        }
    }

    fn parse_attribute(&mut self) -> Result<Attribute, (String, Span)> {
        let at_tok = self.match_token(TokenKind::At)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected identifier after '@'".into(), self.peek().span)),
        };

        let mut args = Vec::new();
        let mut end_span = at_tok.span;
        if self.check(&TokenKind::LParen) {
            self.advance();
            while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
                match self.peek_kind() {
                    TokenKind::Ident(arg) => {
                        args.push(arg.clone());
                        self.advance();
                    }
                    TokenKind::StrLit(arg) => {
                        args.push(arg.clone());
                        self.advance();
                    }
                    _ => {
                        return Err((
                            "Expected argument inside attribute ()".into(),
                            self.peek().span,
                        ));
                    }
                }
                if self.check(&TokenKind::Comma) {
                    self.advance();
                } else {
                    break;
                }
            }
            let rparen = self.match_token(TokenKind::RParen)?;
            end_span = rparen.span;
        }

        Ok(Attribute {
            name,
            args,
            span: at_tok.span.merge(end_span),
        })
    }

    fn parse_struct_decl(
        &mut self,
        attributes: Vec<Attribute>,
    ) -> Result<SpannedStmt, (String, Span)> {
        let st_tok = self.match_token(TokenKind::Struct)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected struct name identifier".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LBrace)?;
        let mut fields = Vec::new();
        self.skip_semicolons();
        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            let f_name = match self.peek_kind() {
                TokenKind::Ident(n) => {
                    let n = n.clone();
                    self.advance();
                    n
                }
                _ => return Err(("Expected field name in struct".into(), self.peek().span)),
            };
            self.match_token(TokenKind::Colon)?;
            let f_ty = self.parse_type()?;
            fields.push((f_name, f_ty));
            if self.check(&TokenKind::Comma) {
                self.advance();
            }
            self.skip_semicolons();
        }
        let rbrace = self.match_token(TokenKind::RBrace)?;

        Ok(SpannedStmt {
            kind: StmtKind::StructDecl {
                attributes,
                name,
                type_params,
                fields,
            },
            span: st_tok.span.merge(rbrace.span),
        })
    }

    fn parse_trait_decl(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let trait_tok = self.match_token(TokenKind::Trait)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected trait name identifier".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LBrace)?;
        let mut associated_types = Vec::new();
        let mut methods = Vec::new();
        self.skip_semicolons();

        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            match self.peek_kind() {
                TokenKind::Type => associated_types.push(self.parse_associated_type_decl()?),
                TokenKind::Fn => methods.push(self.parse_trait_method_sig()?),
                other => {
                    return Err((
                        format!(
                            "Expected associated type or method in trait, got {:?}",
                            other
                        ),
                        self.peek().span,
                    ));
                }
            }
            self.skip_semicolons();
        }

        let rbrace = self.match_token(TokenKind::RBrace)?;
        Ok(SpannedStmt {
            kind: StmtKind::TraitDecl {
                name,
                type_params,
                associated_types,
                methods,
            },
            span: trait_tok.span.merge(rbrace.span),
        })
    }

    fn parse_associated_type_decl(&mut self) -> Result<AssociatedTypeDecl, (String, Span)> {
        let type_tok = self.match_token(TokenKind::Type)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected associated type name".into(), self.peek().span)),
        };

        let mut bounds = Vec::new();
        if self.check(&TokenKind::Colon) {
            self.advance();
            loop {
                bounds.push(self.parse_primary_type()?);
                if self.check(&TokenKind::Plus) {
                    self.advance();
                } else {
                    break;
                }
            }
        }

        let mut default = None;
        if self.check(&TokenKind::Equal) {
            self.advance();
            default = Some(self.parse_type()?);
        }
        self.skip_semicolons();

        Ok(AssociatedTypeDecl {
            name,
            bounds,
            default,
            span: type_tok.span,
        })
    }

    fn parse_trait_method_sig(&mut self) -> Result<TraitMethodSig, (String, Span)> {
        let fn_tok = self.match_token(TokenKind::Fn)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected trait method name".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LParen)?;
        let mut params = Vec::new();
        while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
            params.push(self.parse_trait_method_param()?);
            if self.check(&TokenKind::Comma) {
                self.advance();
            } else {
                break;
            }
        }
        self.match_token(TokenKind::RParen)?;

        let mut ret_type = TypeNode::Void;
        if self.check(&TokenKind::Arrow) {
            self.advance();
            ret_type = self.parse_type()?;
        }
        self.skip_semicolons();

        Ok(TraitMethodSig {
            name,
            type_params,
            params,
            ret_type,
            span: fn_tok.span,
        })
    }

    fn parse_trait_method_param(&mut self) -> Result<TraitMethodParam, (String, Span)> {
        if self.check(&TokenKind::Amp) {
            self.advance();
            let is_mut = if self.check(&TokenKind::Mut) {
                self.advance();
                true
            } else {
                false
            };
            match self.advance().kind {
                TokenKind::Ident(name) if name == "self" => {
                    return Ok(TraitMethodParam {
                        name,
                        type_annot: Some(TypeNode::Ref(
                            Box::new(TypeNode::Custom("Self".to_string())),
                            is_mut,
                        )),
                        is_self: true,
                    });
                }
                other => {
                    return Err((
                        format!("Expected 'self' after '&' in trait method, got {:?}", other),
                        self.peek().span,
                    ));
                }
            }
        }

        let name = match self.advance().kind {
            TokenKind::Ident(n) => n,
            other => {
                return Err((
                    format!("Expected parameter name in trait method, got {:?}", other),
                    self.peek().span,
                ));
            }
        };

        if name == "self" && !self.check(&TokenKind::Colon) {
            return Ok(TraitMethodParam {
                name,
                type_annot: Some(TypeNode::Custom("Self".to_string())),
                is_self: true,
            });
        }

        self.match_token(TokenKind::Colon)?;
        let type_annot = self.parse_type()?;
        Ok(TraitMethodParam {
            name,
            type_annot: Some(type_annot),
            is_self: false,
        })
    }

    fn parse_impl_block(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let impl_tok = self.match_token(TokenKind::Impl)?;
        let type_params = self.parse_generic_params()?;
        let first_type = self.parse_type()?;
        let (trait_ref, target_type) = if self.check(&TokenKind::For) {
            self.advance();
            let target = self.parse_type()?;
            (Some(first_type), target)
        } else {
            (None, first_type)
        };

        self.match_token(TokenKind::LBrace)?;
        let mut items = Vec::new();
        self.skip_semicolons();
        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            match self.peek_kind() {
                TokenKind::Type => {
                    let type_tok = self.match_token(TokenKind::Type)?;
                    let name = match self.peek_kind() {
                        TokenKind::Ident(n) => {
                            let n = n.clone();
                            self.advance();
                            n
                        }
                        _ => {
                            return Err((
                                "Expected associated type name in impl".into(),
                                self.peek().span,
                            ));
                        }
                    };
                    self.match_token(TokenKind::Equal)?;
                    let target = self.parse_type()?;
                    self.skip_semicolons();
                    items.push(ImplItem::AssociatedType {
                        name,
                        target,
                        span: type_tok.span,
                    });
                }
                TokenKind::Ident(s) if s == "pub" => {
                    self.advance();
                    let method = self.parse_function(Vec::new())?;
                    items.push(ImplItem::Method(Box::new(method)));
                }
                TokenKind::Async | TokenKind::Fn => {
                    let method = self.parse_function(Vec::new())?;
                    items.push(ImplItem::Method(Box::new(method)));
                }
                TokenKind::Operator => {
                    let operator = self.parse_operator_decl(Vec::new())?;
                    items.push(ImplItem::Method(Box::new(operator)));
                }
                other => {
                    return Err((
                        format!(
                            "Expected associated type, method, or operator in impl, got {:?}",
                            other
                        ),
                        self.peek().span,
                    ));
                }
            }
            self.skip_semicolons();
        }
        let rbrace = self.match_token(TokenKind::RBrace)?;

        Ok(SpannedStmt {
            kind: StmtKind::ImplBlock {
                type_params,
                trait_ref,
                target_type,
                items,
            },
            span: impl_tok.span.merge(rbrace.span),
        })
    }

    fn parse_operator_decl(
        &mut self,
        attributes: Vec<Attribute>,
    ) -> Result<SpannedStmt, (String, Span)> {
        let op_tok = self.match_token(TokenKind::Operator)?;
        let operator = self.parse_operator_symbol()?;
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LParen)?;
        let mut params = Vec::new();
        while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
            let p_name = match self.peek_kind() {
                TokenKind::Ident(n) => {
                    let n = n.clone();
                    self.advance();
                    n
                }
                _ => {
                    return Err((
                        "Expected parameter name in operator declaration".into(),
                        self.peek().span,
                    ));
                }
            };
            self.match_token(TokenKind::Colon)?;
            let p_type = self.parse_type()?;
            params.push((p_name, p_type));

            if self.check(&TokenKind::Comma) {
                self.advance();
            } else {
                break;
            }
        }
        self.match_token(TokenKind::RParen)?;

        let mut ret_type = TypeNode::Void;
        if self.check(&TokenKind::Arrow) {
            self.advance();
            ret_type = self.parse_type()?;
        }

        let body = self.parse_block()?;
        Ok(SpannedStmt {
            kind: StmtKind::Operator {
                attributes,
                operator,
                type_params,
                params,
                ret_type,
                body: body.0,
            },
            span: op_tok.span.merge(body.1),
        })
    }

    fn parse_operator_symbol(&mut self) -> Result<String, (String, Span)> {
        let tok = self.advance();
        let op = match tok.kind {
            TokenKind::Plus => "+".to_string(),
            TokenKind::Minus => "-".to_string(),
            TokenKind::Star => "*".to_string(),
            TokenKind::Slash => "/".to_string(),
            TokenKind::Percent => "%".to_string(),
            TokenKind::EqualEqual => "==".to_string(),
            TokenKind::BangEqual => "!=".to_string(),
            TokenKind::Less => "<".to_string(),
            TokenKind::LessEqual => "<=".to_string(),
            TokenKind::Greater => ">".to_string(),
            TokenKind::GreaterEqual => ">=".to_string(),
            TokenKind::Pipe => "|".to_string(),
            TokenKind::CustomOperator(op) => op,
            TokenKind::Ident(op) => op,
            other => {
                return Err((
                    format!("Expected operator symbol, got {:?}", other),
                    tok.span,
                ));
            }
        };
        Ok(op)
    }

    fn parse_extern_block(
        &mut self,
        attributes: Vec<Attribute>,
    ) -> Result<SpannedStmt, (String, Span)> {
        let ext_tok = self.match_token(TokenKind::Extern)?;

        // Optional ABI string: extern "C" { ... } (defaults to "C")
        let abi = match self.peek_kind() {
            TokenKind::StrLit(s) => {
                let s = s.clone();
                self.advance();
                s
            }
            _ => "C".to_string(),
        };

        self.match_token(TokenKind::LBrace)?;
        let mut functions = Vec::new();
        self.skip_semicolons();

        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            if !matches!(self.peek_kind(), TokenKind::Fn | TokenKind::Async) {
                return Err((
                    "Expected 'fn' declaration inside extern block".into(),
                    self.peek().span,
                ));
            }

            let fn_tok = self.match_token(TokenKind::Fn)?;
            let name = match self.peek_kind() {
                TokenKind::Ident(n) => {
                    let n = n.clone();
                    self.advance();
                    n
                }
                _ => return Err(("Expected external function name".into(), self.peek().span)),
            };

            self.match_token(TokenKind::LParen)?;
            let mut params = Vec::new();
            while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
                let p_name = match self.peek_kind() {
                    TokenKind::Ident(n) => {
                        let n = n.clone();
                        self.advance();
                        n
                    }
                    _ => {
                        return Err((
                            "Expected parameter name in extern fn".into(),
                            self.peek().span,
                        ));
                    }
                };
                self.match_token(TokenKind::Colon)?;
                let p_type = self.parse_type()?;
                params.push((p_name, p_type));

                if self.check(&TokenKind::Comma) {
                    self.advance();
                } else {
                    break;
                }
            }
            self.match_token(TokenKind::RParen)?;

            let mut ret_type = TypeNode::Void;
            if self.check(&TokenKind::Arrow) {
                self.advance();
                ret_type = self.parse_type()?;
            }
            self.skip_semicolons();

            functions.push(ExternFnDecl {
                name,
                params,
                ret_type,
                span: fn_tok.span,
            });
        }
        let rbrace = self.match_token(TokenKind::RBrace)?;

        Ok(SpannedStmt {
            kind: StmtKind::ExternBlock {
                attributes,
                abi,
                functions,
            },
            span: ext_tok.span.merge(rbrace.span),
        })
    }

    fn parse_enum_decl(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let enum_tok = self.match_token(TokenKind::Enum)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected enum name identifier".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LBrace)?;
        let mut variants = Vec::new();
        self.skip_semicolons();
        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            let v_name = match self.peek_kind() {
                TokenKind::Ident(n) => {
                    let n = n.clone();
                    self.advance();
                    n
                }
                _ => return Err(("Expected variant name in enum".into(), self.peek().span)),
            };
            let mut payload = None;
            if self.check(&TokenKind::LParen) {
                self.advance();
                let mut payload_items = Vec::new();
                while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
                    payload_items.push(self.parse_type()?);
                    if self.check(&TokenKind::Comma) {
                        self.advance();
                    } else {
                        break;
                    }
                }
                self.match_token(TokenKind::RParen)?;
                payload = match payload_items.len() {
                    0 => None,
                    1 => Some(payload_items.remove(0)),
                    _ => Some(TypeNode::Tuple(payload_items)),
                };
            }
            variants.push((v_name, payload));
            if self.check(&TokenKind::Comma) {
                self.advance();
            }
            self.skip_semicolons();
        }
        let rbrace = self.match_token(TokenKind::RBrace)?;

        Ok(SpannedStmt {
            kind: StmtKind::EnumDecl {
                name,
                type_params,
                variants,
            },
            span: enum_tok.span.merge(rbrace.span),
        })
    }

    fn parse_type_alias(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let type_tok = self.match_token(TokenKind::Type)?;
        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected type alias name".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;
        self.match_token(TokenKind::Equal)?;
        let target = self.parse_type()?;
        self.skip_semicolons();

        Ok(SpannedStmt {
            kind: StmtKind::TypeAlias {
                name,
                type_params,
                target,
            },
            span: type_tok.span,
        })
    }

    fn parse_function(
        &mut self,
        attributes: Vec<Attribute>,
    ) -> Result<SpannedStmt, (String, Span)> {
        let (is_async, start_span) = if self.check(&TokenKind::Async) {
            let tok = self.advance();
            self.match_token(TokenKind::Fn)?;
            (true, tok.span)
        } else {
            let tok = self.match_token(TokenKind::Fn)?;
            (false, tok.span)
        };

        let name = match self.peek_kind() {
            TokenKind::Ident(n) => {
                let n = n.clone();
                self.advance();
                n
            }
            _ => return Err(("Expected function name identifier".into(), self.peek().span)),
        };
        let type_params = self.parse_generic_params()?;

        self.match_token(TokenKind::LParen)?;
        let mut params = Vec::new();
        while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
            let (p_name, p_type) = if self.check(&TokenKind::Amp) {
                self.advance();
                let is_mut = if self.check(&TokenKind::Mut) {
                    self.advance();
                    true
                } else {
                    false
                };
                let name = match self.peek_kind() {
                    TokenKind::Ident(n) => {
                        let n = n.clone();
                        self.advance();
                        n
                    }
                    _ => {
                        return Err(("Expected parameter name after '&'".into(), self.peek().span));
                    }
                };
                let ty = if self.check(&TokenKind::Colon) {
                    self.advance();
                    self.parse_type()?
                } else {
                    TypeNode::Ref(Box::new(TypeNode::Custom("Self".to_string())), is_mut)
                };
                (name, ty)
            } else {
                let p_name = match self.peek_kind() {
                    TokenKind::Ident(n) => {
                        let n = n.clone();
                        self.advance();
                        n
                    }
                    _ => return Err(("Expected parameter name".into(), self.peek().span)),
                };

                if p_name == "self" && !self.check(&TokenKind::Colon) {
                    (p_name, TypeNode::Custom("Self".to_string()))
                } else {
                    self.match_token(TokenKind::Colon)?;
                    let p_type = self.parse_type()?;
                    (p_name, p_type)
                }
            };

            params.push((p_name, p_type));

            if self.check(&TokenKind::Comma) {
                self.advance();
            } else {
                break;
            }
        }
        self.match_token(TokenKind::RParen)?;

        let mut ret_type = TypeNode::Void;
        if self.check(&TokenKind::Arrow) {
            self.advance();
            ret_type = self.parse_type()?;
        }

        let body = self.parse_block()?;
        let span = start_span.merge(body.1);

        Ok(SpannedStmt {
            kind: StmtKind::Function {
                attributes,
                name,
                type_params,
                is_async,
                params,
                ret_type,
                body: body.0,
            },
            span,
        })
    }

    fn parse_block(&mut self) -> Result<(Vec<SpannedStmt>, Span), (String, Span)> {
        let lbrace = self.match_token(TokenKind::LBrace)?;
        let mut body = Vec::new();
        self.skip_semicolons();

        while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
            body.push(self.parse_statement()?);
            self.skip_semicolons();
        }

        let rbrace = self.match_token(TokenKind::RBrace)?;
        Ok((body, lbrace.span.merge(rbrace.span)))
    }

    fn parse_unsafe_block(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let unsafe_tok = self.match_token(TokenKind::Unsafe)?;
        let (body, body_span) = self.parse_block()?;
        Ok(SpannedStmt {
            kind: StmtKind::UnsafeBlock(body),
            span: unsafe_tok.span.merge(body_span),
        })
    }

    fn parse_let(&mut self) -> Result<SpannedStmt, (String, Span)> {
        let let_tok = self.match_token(TokenKind::Let)?;
        let is_mut = if self.check(&TokenKind::Mut) {
            self.advance();
            true
        } else {
            false
        };

        if self.check(&TokenKind::LParen) || self.check(&TokenKind::LBrace) {
            if is_mut {
                return Err((
                    "Mutable destructuring bindings are not supported yet".into(),
                    let_tok.span,
                ));
            }
            let pattern = self.parse_destructure_pattern()?;
            let mut type_annot = None;
            if self.check(&TokenKind::Colon) {
                self.advance();
                type_annot = Some(self.parse_type()?);
            }
            self.match_token(TokenKind::Equal)?;
            let value = self.parse_expr()?;
            self.skip_semicolons();
